# elastic-utils

./: AGENTS.md  README.md  dprint.json  pyproject.toml
.github/workflows/: deploy.yml
result-viewer/: .gitignore  package.json  svelte.config.js  vite.config.ts
result-viewer/src/lib/components/: DataTable.svelte  FieldSidebar.svelte  FileDropzone.svelte  FilterBar.svelte  MiniHistogram.svelte  Pagination.svelte  QueryBar.svelte  RowDetailPanel.svelte  StatusBar.svelte  TimeRangePicker.svelte
result-viewer/src/lib/components/ui/button/: button.svelte  index.ts
result-viewer/src/lib/components/ui/resizable/: resizable-handle.svelte  resizable-pane-group.svelte
result-viewer/src/lib/components/ui/table/: index.ts  table-cell.svelte  table-head.svelte  table-row.svelte  table.svelte
result-viewer/src/lib/duckdb/: index.ts
result-viewer/src/lib/services/: field-stats.ts  file-loader.ts  query-builder.ts  schema-parser.ts
result-viewer/src/lib/stores/: app-state.svelte.ts
result-viewer/src/routes/: +page.svelte
src/elastic_utils/: __init__.py  auth.py  cli.py  client.py  config.py  describe.py  formatting.py  get.py  jsonl.py  models.py  search.py  version.py
tests/: conftest.py  test_auth.py  test_config.py  test_describe.py  test_get.py  test_jsonl.py  test_search.py  test_version.py
