[project]
name = "elastic-utils"
version = "0.1.0"
description = "CLI utilities for Elasticsearch"
readme = "README.md"
authors = [
  { name = "Enno Richter", email = "enno@nerdworks.de" },
]
requires-python = ">=3.13"
dependencies = [
  "click>=8.3.1",
  "httpx>=0.28.0",
  "platformdirs>=4.3.0",
  "pydantic>=2.0",
  "rich>=14.2.0",
  "rich-click>=1.9.5",
]

[project.optional-dependencies]
xlsx = ["xlsxwriter>=3.0"]

[project.scripts]
elastic-utils = "elastic_utils:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-databases>=0.15.1",
  "typing-extensions>=4.15.0",
]
